add dvlhost (dLAN 200 AV Wireless G) board
Signed-off-by: Michael Schwingen <michael@schwingen.org>

--- a/boards.cfg
+++ b/boards.cfg
@@ -171,6 +171,7 @@ actux1_8_32                  arm         ixp         actux1              -      
 actux2                       arm         ixp
 actux3                       arm         ixp
 actux4                       arm         ixp
+dvlhost                      arm         ixp
 ixdp425                      arm         ixp
 ixdpg425                     arm         ixp
 lpd7a400                     arm         lh7a40x     lpd7a40x
