--- a/nand_spl/board/davinci/da8xxevm/Makefile
+++ b/nand_spl/board/davinci/da8xxevm/Makefile
@@ -36,9 +36,20 @@ LDFLAGS := -T $(nandobj)u-boot.lds -Ttext $(CONFIG_SYS_TEXT_BASE) $(LDFLAGS) \
 AFLAGS	+= -DCONFIG_SPL_BUILD -DCONFIG_NAND_SPL
 CFLAGS	+= -DCONFIG_SPL_BUILD -DCONFIG_NAND_SPL
 
-SOBJS	= start.o _udivsi3.o _divsi3.o
-COBJS	= cpu.o davinci_nand.o ns16550.o div0.o davinci_pinmux.o psc.o	\
-	misc.o hawkboard_nand_spl.o nand_boot.o
+SOBJS	= _divsi3.o \
+	_udivsi3.o \
+	start.o
+
+COBJS	= cpu.o \
+	davinci_nand.o \
+	davinci_pinmux.o \
+	div0.o \
+	hawkboard_nand_spl.o \
+	memsize.o \
+	misc.o \
+	nand_boot.o \
+	ns16550.o \
+	psc.o
 
 SRCS	:= $(addprefix $(obj),$(SOBJS:.o=.S) $(COBJS:.o=.c))
 OBJS	:= $(addprefix $(obj),$(SOBJS) $(COBJS))
@@ -125,6 +136,10 @@ $(obj)psc.c:
 	@rm -f $@
 	ln -s $(TOPDIR)/arch/arm/cpu/arm926ejs/davinci/psc.c $@
 
+# from common directory
+$(obj)memsize.c:
+	@rm -f $@
+	ln -s $(TOPDIR)/common/memsize.c $@
 
 #########################################################################
 
